# itad-scraper

./: README.md  main.py  pyproject.toml  scraper.py
