[tool.poetry]
name = "itad-scraper"
version = "0.1.0"
description = ""
authors = ["juhanikat <juhani.kataja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.poetry.scripts]
start = "scraper:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
